# QtQmlDemo

./: .gitignore  CLAUDE.md  CMakeLists.txt  MYSQL_DLL_README.md  README.md  README_CONFIG.md  UPDATE_SUMMARY.md  build_test.bat  debug_run.bat  deploy.bat  deploy.sh  monitor.sh  qml.qrc  quick_fix.bat  simple_fix.bat  test_qt.cpp  view_logs.sh  使用说明-HTTP代理模式.md  技术方案-医保人员信息批量更新.md
.claude/commands/: commit.md  push.md
.github/workflows/: build-simple.yml  build-win7.yml  build-windows.yml
build_test/: QtQmlDemo
build_test/QtQmlDemo_autogen/: deps  mocs_compilation.cpp
build_test/QtQmlDemo_autogen/UVLADIE3JM/: moc_backend.cpp.d  moc_databasemanager.cpp.d  moc_httpclient.cpp.d  moc_medicaldataprocessor.cpp.d
dependencies/mysql/: README.md
dependencies/qt-plugins/sqldrivers/: README.md
qml/: Card.qml  HomePage.qml  Main.qml  MainSimple.qml  ProcessPage.qml  SettingsPage.qml
src/: backend.cpp  backend.h  databasemanager.h  databasemanager_direct.cpp.bak  databasemanager_http.cpp  databasemanager_http.cpp.bak2  httpclient.cpp  httpclient.h  main.cpp  medicaldataprocessor.cpp  medicaldataprocessor.h
